// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel styled component extract based on props 1`] = `
"import './styled.test.emotion.css';
const H1 = styled('h1', 'css-H1-q3ohdq', [fontSize + 'px', props => props.translateX]);"
`;

exports[`babel styled component extract based on props 2`] = `".css-H1-q3ohdq { font-size: var(--css-H1-q3ohdq-0); height: 20px; -webkit-transform: translateX(var(--css-H1-q3ohdq-1)); -ms-transform: translateX(var(--css-H1-q3ohdq-1)); transform: translateX(var(--css-H1-q3ohdq-1)) }"`;

exports[`babel styled component extract basic 1`] = `
"import './styled.test.emotion.css';
const H1 = styled('h1', 'css-H1-1mh2el5', [fontSize + 'px']);"
`;

exports[`babel styled component extract basic 2`] = `".css-H1-1mh2el5 { font-size: var(--css-H1-1mh2el5-0); height: 20px }"`;

exports[`babel styled component extract no dynamic 1`] = `
"import \\"./styled.test.emotion.css\\";
styled(\\"h1\\", \\"css-14ksm7b\\", []);"
`;

exports[`babel styled component extract no dynamic 2`] = `".css-14ksm7b { color: blue; }"`;

exports[`babel styled component extract no use 1`] = `"\\"h1\\";"`;

exports[`babel styled component extract with fragment 1`] = `
"const frag1 = \`width: 20px;\`;
const H1 = styled('h1', 'css-H1-osx1au', [fontSize + 'px', props => props.translateX, frag1], function createEmotionStyledRules(x0, x1, x2) {
  return [\`.css-H1-osx1au { font-size: \${x0};
        height: 20px;
        -webkit-transform: translateX(\${x1});
        -ms-transform: translateX(\${x1});
        transform: translateX(\${x1});
        \${x2} }\`];
});"
`;

exports[`babel styled component inline attr 1`] = `
"styled('input', 'css-14vghnb', [function getMargin(props) {
       return props.margin;
}, props => props.height * props.scale, function getWidth(props) {
       return props.width;
}, flex], function createEmotionStyledRules(x0, x1, x2, x3) {
       return [\`.css-14vghnb { margin: \${x0};
       color: #ffffff;
       height: \${x1};
       width: \${x2};
       color: blue;
       display: \${x3}; }\`];
});"
`;

exports[`babel styled component inline attr kitchen sink 1`] = `
"styled('input', 'css-1lqib20', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}, function getWidth(props) {
        return props.width ? props.width : ('95' + '%');
}, function getHeight(props) {
        return props.height ? props.height : ('90' + 'vw');
}, function getDisplay(props) {
        return props.display ? props.display : ('flex' + '');
}], function createEmotionStyledRules(x0, x1, x2, x3, x4) {
        return [\`.css-1lqib20 { margin: \${x0};
        padding: \${x1};
        font-size: attr(fontSize ch, 8);
        width: \${x2};
        height: \${x3};
        display: \${x4}; }\`];
});"
`;

exports[`babel styled component inline attr with default value 1`] = `
"styled('input', 'css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + '');
}], function createEmotionStyledRules(x0) {
        return [\`.css-1luxokk { margin: \${x0}; }\`];
});"
`;

exports[`babel styled component inline attr with value type 1`] = `
"styled('input', 'css-1luxokk', [function getMargin(props) {
        return props.margin + 'px';
}], function createEmotionStyledRules(x0) {
        return [\`.css-1luxokk { margin: \${x0}; }\`];
});"
`;

exports[`babel styled component inline attr with value type and default value 1`] = `
"styled('input', 'css-1luxokk', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}], function createEmotionStyledRules(x0) {
        return [\`.css-1luxokk { margin: \${x0}; }\`];
});"
`;

exports[`babel styled component inline basic 1`] = `
"const H1 = styled('h1', 'css-H1-1t8i2zo', [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-H1-1t8i2zo { font-size: \${x0}; }\`];
});"
`;

exports[`babel styled component inline function call 1`] = `
"styled(MyComponent, 'css-1t8i2zo', [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-1t8i2zo { font-size: \${x0}; }\`];
});"
`;

exports[`babel styled component inline match works on multiple 1`] = `
"styled('input', 'css-1j6h68f', [function getMargin(props) {
        return props.margin ? props.margin : ('16' + 'px');
}, function getPadding(props) {
        return props.padding ? props.padding : ('16' + 'em');
}], function createEmotionStyledRules(x0, x1) {
        return [\`.css-1j6h68f { margin: \${x0};
        color: blue;
        padding: \${x1}; }\`];
});"
`;

exports[`babel styled component inline name is correct with no identifier 1`] = `
"
css(\\"css-1cppx8p\\", [], function createEmotionRules() {
        return [\`.css-1cppx8p { margin: 12px 48px;
        color: #ffffff; }\`];
});"
`;

exports[`babel styled component inline no dynamic 1`] = `
"styled(\\"h1\\", \\"css-14ksm7b\\", [], function createEmotionStyledRules() {
  return [\`.css-14ksm7b { color: blue; }\`];
});"
`;

exports[`babel styled component inline no dynamic 2`] = `
"
const SomeComponent = \\"div\\";
styled(\\"h1\\", \\"css-byjn67\\", [SomeComponent], function createEmotionStyledRules(x0) {
  return [\`.css-byjn67 { color: blue; }\`, \`.css-byjn67 \${x0} { color: green; }\`];
});"
`;

exports[`babel styled component inline no use 1`] = `"\\"h1\\";"`;
